--- a/CuantoMeme2.0/bbdd_ejem6_mio/pom.xml
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/pom.xml
@@ -43,6 +43,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-	</dependencies>
+        <dependency>
+    		<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId> </dependency>
+		</dependencies>
 
 </project>
