--- a/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test2?user=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?user=root
 spring.datasource.username=root
 spring.datasource.password=password123123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
