--- a/CuantoMeme/package.json
+++ b/CuantoMeme/package.json
@@ -26,6 +26,7 @@
     "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.2.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
