--- a/CuantoMeme2.0/bbdd_ejem6_mio/.project
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bbdd_ejem6_mio</name>
+	<name>CuantoMeme_Backend</name>
 	<comment></comment>
 	<projects>
 	</projects>
