--- a/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/CuantoMeme?user=root
-spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
