--- a/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
@@ -3,3 +3,12 @@ spring.datasource.username=root
 spring.datasource.password=password123123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+# you can get into iam page [https://console.aws.amazon.com/iam/home]
+cloud.aws.credentials.accessKey=AKIAIULS5EDD7AISBESA
+cloud.aws.credentials.secretKey=tdYk6PSZWWZsas5tdVk311rU1sbYoWtFJMnmuSc+
+
+# example : ap-northeast-1
+cloud.aws.region=eu-west-1
+
+# example : s3-bucket-test-1
+cloud.aws.s3.bucket=bucketdawfase5
