--- a/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
-spring.datasource.username=root
-spring.datasource.password=password123123
+spring.datasource.url=jdbc:mysql://${CMURL}:${CMPORT}/${CMDB}
+spring.datasource.username=${CMUSER}
+spring.datasource.password=${CMPASS}
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 # you can get into iam page [https://console.aws.amazon.com/iam/home]
