--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password123123
   webapp:
-    image: rdbarrientosa/cmbt2
+    image: rdbarrientosa/cuantomemebackendspring
     depends_on:
       - dbcm
     ports:
